--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,12 +32,12 @@ jobs:
           name: Build targets for gapic-generator-java
           command: |
             cd /tmp/gapic-generator-java
-            bazel --batch build //...
+            bazel --batch build //src/...
       - run:
           name: Run unit tests for gapic-generator-java
           command: |
             cd /tmp/gapic-generator-java
-            bazel --batch test //... --noshow_progress
+            bazel --batch test //src/test/... --noshow_progress
             find . -type f -regex ".*/bazel-testlogs/.*xml" -exec cp {} ${TEST_REPORTS_DIR} \;
       - store_test_results:
           path: bazel/reports/gapic-generator-java
