--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,7 @@ jobs:
           name: Make reports directory
           command: |
             mkdir -p ${TEST_REPORTS_DIR}
+            echo "Test report directory: ${TEST_REPORTS_DIR}"
       - run:
           name: Build targets for gapic-generator-java
           command: |
@@ -40,9 +41,9 @@ jobs:
             bazel --batch test //... --noshow_progress
             find . -type f -regex ".*/bazel-testlogs/.*xml" -exec cp {} ${TEST_REPORTS_DIR} \;
       - store_test_results:
-          path: bazel/reports/gapic-generator-java
+          path: /tmp/workspace/bazel/reports/gapic-generator-java
       - store_artifacts:
-          path: bazel/reports/gapic-generator-java
+          path: /tmp/workspace/bazel/reports/gapic-generator-java
   google-java-format:
     docker:
       - image: l.gcr.io/google/bazel
