--- a/test/integration/BUILD.bazel
+++ b/test/integration/BUILD.bazel
@@ -1,5 +1,6 @@
 load(
     "@com_google_googleapis_imports//:imports.bzl",
+    "proto_library_with_info",
     java_gapic_library = "java_gapic_library2",
 )
 
@@ -22,5 +23,30 @@ java_gapic_library(
     deps = [
         "@com_google_googleapis//google/cloud/asset/v1:asset_java_proto",
         "@com_google_googleapis//google/iam/v1:iam_java_proto",
+    ],
+)
+
+# Redis API.
+# Redefine the proto_with_info target so we can include empty_proto.
+# This should be removed post-migration.
+proto_library_with_info(
+    name = "redis_proto_with_info",
+    deps = [
+        "@com_google_googleapis//google/cloud:common_resources_proto",
+        "@com_google_googleapis//google/cloud/redis/v1:redis_proto",
+        "@com_google_protobuf//:empty_proto",
+    ],
+)
+
+java_gapic_library(
+    name = "redis_java_gapic",
+    srcs = ["redis_proto_with_info"],
+    grpc_service_config = "@com_google_googleapis//google/cloud/redis/v1:redis_grpc_service_config.json",
+    package = "google.cloud.redis.v1",
+    test_deps = [
+        "@com_google_googleapis//google/cloud/redis/v1:redis_java_grpc",
+    ],
+    deps = [
+        "@com_google_googleapis//google/cloud/redis/v1:redis_java_proto",
     ],
 )
