--- a/gax-java/gax-httpjson/build.gradle
+++ b/gax-java/gax-httpjson/build.gradle
@@ -5,6 +5,8 @@ project.version = "0.76.1" // {x-version-update:gax-httpjson:current}
 
 dependencies {
   compile project(':gax'),
+    libraries['maven.com_google_protobuf'],
+    libraries['maven.com_google_protobuf_java_util'],
     libraries['maven.com_google_code_gson_gson'],
     libraries['maven.com_google_guava_guava'],
     libraries['maven.com_google_code_findbugs_jsr305'],
