--- a/test/integration/goldens/redis/BUILD.bazel
+++ b/test/integration/goldens/redis/BUILD.bazel
@@ -1,6 +1,6 @@
 package(default_visibility = ["//visibility:public"])
 
 filegroup(
-    name = "redis_goldens_files",
+    name = "goldens_files",
     srcs = glob(["*.java"]),
 )
