--- a/gapic-generator-java/test/integration/BUILD.bazel
+++ b/gapic-generator-java/test/integration/BUILD.bazel
@@ -4,6 +4,11 @@ load(
     java_gapic_library = "java_gapic_library2",
 )
 
+load(
+    "//:rules_bazel/java/integration_test.bzl",
+    "integration_test",
+)
+
 package(default_visibility = ["//visibility:public"])
 
 ####################################################
@@ -49,4 +54,10 @@ java_gapic_library(
     deps = [
         "@com_google_googleapis//google/cloud/redis/v1:redis_java_proto",
     ],
+)
+
+integration_test(
+    name = "redis",
+    target = ":redis_java_gapic",
+    data = ["//test/integration/goldens/redis:goldens_files"],
 )
