--- a/test/integration/BUILD.bazel
+++ b/test/integration/BUILD.bazel
@@ -7,6 +7,7 @@ load(
 load(
     "//:rules_bazel/java/integration_test.bzl",
     "integration_test",
+    "golden_update",
 )
 
 package(default_visibility = ["//visibility:public"])
@@ -58,6 +59,12 @@ java_gapic_library(
 
 integration_test(
     name = "redis",
+    target = ":redis_java_gapic",
+    data = ["//test/integration/goldens/redis:goldens_files"],
+)
+
+golden_update(
+    name = "redis_update",
     target = ":redis_java_gapic",
     data = ["//test/integration/goldens/redis:goldens_files"],
 )
