--- a/src/test/java/com/google/api/generator/gapic/testdata/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/testdata/BUILD.bazel
@@ -13,6 +13,11 @@ filegroup(
     srcs = glob(["*_gapic.yaml"]),
 )
 
+filegroup(
+    name = "service_yaml_files",
+    srcs = ["logging.yaml"],
+)
+
 genrule(
     name = "basic_proto_descriptor",
     srcs = [
