--- a/gapic-generator-java/src/test/java/com/google/api/generator/gapic/protoparser/BUILD.bazel
+++ b/gapic-generator-java/src/test/java/com/google/api/generator/gapic/protoparser/BUILD.bazel
@@ -4,6 +4,7 @@ package(default_visibility = ["//visibility:public"])
 
 TESTS = [
     "BatchingSettingsConfigParserTest",
+    "HttpRuleParserTest",
     "MethodSignatureParserTest",
     "ParserTest",
     "PluginArgumentParserTest",
