--- a/gapic-generator-java/test/integration/BUILD.bazel
+++ b/gapic-generator-java/test/integration/BUILD.bazel
@@ -11,6 +11,22 @@ load(
 package(default_visibility = ["//visibility:public"])
 
 ####################################################
+# Integration Test Rules
+####################################################
+
+integration_test(
+    name = "redis",
+    data = ["//test/integration/goldens/redis:goldens_files"],
+    target = ":redis_java_gapic",
+)
+
+integration_test(
+    name = "asset",
+    target = ":asset_java_gapic",
+    data = ["//test/integration/goldens/asset:goldens_files"],
+)
+
+####################################################
 # API Library Rules
 ####################################################
 # These will eventually go away once more APIs in googleapis have been migrated to the microgenerator.
@@ -54,16 +70,3 @@ java_gapic_library(
         "@com_google_googleapis//google/cloud/redis/v1:redis_java_proto",
     ],
 )
-
-integration_test(
-    name = "redis",
-    data = ["//test/integration/goldens/redis:goldens_files"],
-    target = ":redis_java_gapic",
-)
-
-integration_test(
-    name = "asset",
-    target = ":asset_java_gapic",
-    data = ["//test/integration/goldens/asset:goldens_files"],
-)
-
