--- a/gapic-generator-java/src/main/java/com/google/api/generator/engine/ast/BUILD.bazel
+++ b/gapic-generator-java/src/main/java/com/google/api/generator/engine/ast/BUILD.bazel
@@ -20,6 +20,7 @@ java_library(
         "@com_google_auto_value_auto_value_annotations//jar",
         "@com_google_code_findbugs_jsr305//jar",
         "@com_google_guava_guava//jar",
+        "@com_google_protobuf//:protobuf_java",
         "@javax_validation_javax_validation_api//jar",
     ],
 )
