--- a/gapic-generator-java/dependencies.properties
+++ b/gapic-generator-java/dependencies.properties
@@ -20,6 +20,7 @@ maven.com_google_guava_guava=com.google.guava:guava:26.0-jre
 maven.com_google_code_findbugs_jsr305=com.google.code.findbugs:jsr305:3.0.0
 maven.com_google_auto_value_auto_value=com.google.auto.value:auto-value:1.7.2
 maven.com_google_auto_value_auto_value_annotations=com.google.auto.value:auto-value-annotations:1.7.2
+maven.com_google_code_gson=com.google.code.gson:gson:2.8.6
 maven.com_google_protobuf_protobuf_java=com.google.protobuf:protobuf-java:3.12.2
 maven.io_github_java_diff_utils=io.github.java-diff-utils:java-diff-utils:4.0
 maven.javax_annotation_javax_annotation_api=javax.annotation:javax.annotation-api:1.3.2
@@ -33,7 +34,7 @@ maven.org_threeten_threetenbp=org.threeten:threetenbp:1.3.3
 
 # Testing.
 maven.junit_junit=junit:junit:4.13
-# This hamcrest-core dependency is for running JUnit test manually, before JUnit 4.11 it's wrapped along with JUnit package. 
+# This hamcrest-core dependency is for running JUnit test manually, before JUnit 4.11 it's wrapped along with JUnit package.
 # But now it has to be explicitly added.
 maven.org_hamcrest_hamcrest_core=org.hamcrest:hamcrest-core:1.3
 maven.org_mockito_mockito_core=org.mockito:mockito-core:2.21.0
