--- a/gapic-generator-java/src/main/java/com/google/api/generator/gapic/protoparser/BUILD.bazel
+++ b/gapic-generator-java/src/main/java/com/google/api/generator/gapic/protoparser/BUILD.bazel
@@ -27,6 +27,7 @@ java_library(
         "//src/main/java/com/google/api/generator/gapic/utils",
         "@com_google_api_api_common//jar",
         "@com_google_code_findbugs_jsr305//jar",
+        "@com_google_code_gson//jar",
         "@com_google_googleapis//google/api:api_java_proto",
         "@com_google_googleapis//google/longrunning:longrunning_java_proto",
         "@com_google_guava_guava//jar",
