--- a/gapic-generator-java/test/integration/BUILD.bazel
+++ b/gapic-generator-java/test/integration/BUILD.bazel
@@ -36,6 +36,7 @@ java_gapic_library(
     srcs = ["@com_google_googleapis//google/cloud/asset/v1:asset_proto_with_info"],
     grpc_service_config = "@com_google_googleapis//google/cloud/asset/v1:cloudasset_grpc_service_config.json",
     package = "google.cloud.asset.v1",
+    service_yaml = "@com_google_googleapis//google/cloud/asset/v1:cloudasset_v1.yaml",
     test_deps = [
         "@com_google_googleapis//google/cloud/asset/v1:asset_java_grpc",
         "@com_google_googleapis//google/iam/v1:iam_java_grpc",
@@ -63,6 +64,7 @@ java_gapic_library(
     srcs = ["redis_proto_with_info"],
     grpc_service_config = "@com_google_googleapis//google/cloud/redis/v1:redis_grpc_service_config.json",
     package = "google.cloud.redis.v1",
+    service_yaml = "@com_google_googleapis//google/cloud/redis/v1:redis_v1.yaml",
     test_deps = [
         "@com_google_googleapis//google/cloud/redis/v1:redis_java_grpc",
     ],
@@ -76,6 +78,7 @@ java_gapic_library(
     srcs = ["@com_google_googleapis//google/logging/v2:logging_proto_with_info"],
     grpc_service_config = "@com_google_googleapis//google/logging/v2:logging_grpc_service_config.json",
     package = "google.logging.v2",
+    service_yaml = "@com_google_googleapis//google/logging/v2:logging.yaml",
     test_deps = [
         "@com_google_googleapis//google/logging/v2:logging_java_grpc",
     ],
