--- a/test/integration/BUILD.bazel
+++ b/test/integration/BUILD.bazel
@@ -7,6 +7,7 @@ load(
     "//:rules_bazel/java/integration_test.bzl",
     "golden_update",
     "integration_test",
+    "golden_update",
 )
 
 package(default_visibility = ["//visibility:public"])
@@ -44,6 +45,12 @@ golden_update(
     data = ["//test/integration/goldens/asset:goldens_files"],
     data = ["//test/integration/goldens/asset:goldens_files"],
     target = ":asset_java_gapic",
+)
+
+golden_update(
+    name = "redis_update",
+    target = ":redis_java_gapic",
+    data = ["//test/integration/goldens/redis:goldens_files"],
 )
 
 ####################################################
