feat: support deeply-nested types in AST and proto message parsing

--- a/src/test/java/com/google/api/generator/gapic/protoparser/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/protoparser/BUILD.bazel
@@ -13,6 +13,7 @@ TESTS = [
     "ServiceConfigParserTest",
     "ServiceYamlParserTest",
     "SourceCodeInfoParserTest",
+    "TypeParserTest",
 ]
 
 filegroup(
