--- a/test/integration/BUILD.bazel
+++ b/test/integration/BUILD.bazel
@@ -100,6 +100,7 @@ java_gapic_library(
     package = "google.ads.googleads.v5",
     service_yaml = "@com_google_googleapis//google/ads/googleads/v5:googleads_v5.yaml",
     deps = [
+        "@com_google_googleapis//google/ads/googleads/v5/common:common_proto",
         "@com_google_googleapis//google/ads/googleads/v5/enums:enums_java_proto",
         "@com_google_googleapis//google/ads/googleads/v5/resources:resources_java_proto",
         "@com_google_googleapis//google/ads/googleads/v5/services:services_java_grpc",
