--- a/gapic-generator-java/test/integration/BUILD.bazel
+++ b/gapic-generator-java/test/integration/BUILD.bazel
@@ -33,6 +33,12 @@ golden_update(
     data = ["//test/integration/goldens/redis:goldens_files"],
 )
 
+golden_update(
+    name = "asset_update",
+    target = ":asset_java_gapic",
+    data = ["//test/integration/goldens/asset:goldens_files"],
+)
+
 ####################################################
 # API Library Rules
 ####################################################
@@ -94,3 +100,4 @@ java_gapic_library(
         "@com_google_googleapis//google/logging/v2:logging_java_proto",
     ],
 )
+
