--- a/test/integration/BUILD.bazel
+++ b/test/integration/BUILD.bazel
@@ -42,6 +42,7 @@ golden_update(
 golden_update(
     name = "asset_update",
     data = ["//test/integration/goldens/asset:goldens_files"],
+    data = ["//test/integration/goldens/asset:goldens_files"],
     target = ":asset_java_gapic",
 )
 
