--- a/test/integration/BUILD.bazel
+++ b/test/integration/BUILD.bazel
@@ -53,6 +53,12 @@ golden_update(
     data = ["//test/integration/goldens/redis:goldens_files"],
 )
 
+golden_update(
+    name = "asset_update",
+    target = ":asset_java_gapic",
+    data = ["//test/integration/goldens/asset:goldens_files"],
+)
+
 ####################################################
 # API Library Rules
 ####################################################
