--- a/test/integration/BUILD.bazel
+++ b/test/integration/BUILD.bazel
@@ -45,6 +45,7 @@ golden_update(
 ####################################################
 # These will eventually go away once more APIs in googleapis have been migrated to the microgenerator.
 
+# Asset API.
 java_gapic_library(
     name = "asset_java_gapic",
     srcs = ["@com_google_googleapis//google/cloud/asset/v1:asset_proto_with_info"],
@@ -56,8 +57,22 @@ java_gapic_library(
         "@com_google_googleapis//google/iam/v1:iam_java_grpc",
     ],
     deps = [
-        "@com_google_googleapis//google/cloud/asset/v1:asset_java_proto",
         "@com_google_googleapis//google/iam/v1:iam_java_proto",
+        "@com_google_googleapis//google/identity/accesscontextmanager/v1:accesscontextmanager_proto",
+    ],
+)
+
+java_gapic_assembly_gradle_pkg(
+    name = "google-cloud-asset-v1-java",
+    deps = [
+        ":asset_java_gapic",
+        "@com_google_googleapis//google/cloud/orgpolicy/v1:orgpolicy_java_proto",
+        "@com_google_googleapis//google/cloud/asset/v1:asset_java_grpc",
+        "@com_google_googleapis//google/identity/accesscontextmanager/type:type_java_proto",
+        "@com_google_googleapis//google/identity/accesscontextmanager/v1:accesscontextmanager_java_proto",
+        "@com_google_googleapis//google/cloud/asset/v1:asset_java_proto",
+        "@com_google_googleapis//google/cloud/asset/v1:asset_proto",
+        #"@com_google_googleapis//google/iam/v1:iam_java_proto",
     ],
 )
 
