--- a/test/integration/BUILD.bazel
+++ b/test/integration/BUILD.bazel
@@ -1,12 +1,13 @@
 load(
     "@com_google_googleapis_imports//:imports.bzl",
     "proto_library_with_info",
+    java_gapic_assembly_gradle_pkg = "java_gapic_assembly_gradle_pkg2",
     java_gapic_library = "java_gapic_library2",
 )
 load(
     "//:rules_bazel/java/integration_test.bzl",
-    "integration_test",
     "golden_update",
+    "integration_test",
 )
 
 package(default_visibility = ["//visibility:public"])
@@ -23,20 +24,20 @@ integration_test(
 
 integration_test(
     name = "asset",
-    target = ":asset_java_gapic",
     data = ["//test/integration/goldens/asset:goldens_files"],
+    target = ":asset_java_gapic",
 )
 
 golden_update(
     name = "redis_update",
-    target = ":redis_java_gapic",
     data = ["//test/integration/goldens/redis:goldens_files"],
+    target = ":redis_java_gapic",
 )
 
 golden_update(
     name = "asset_update",
-    target = ":asset_java_gapic",
     data = ["//test/integration/goldens/asset:goldens_files"],
+    target = ":asset_java_gapic",
 )
 
 ####################################################
@@ -86,6 +87,17 @@ java_gapic_library(
     ],
 )
 
+java_gapic_assembly_gradle_pkg(
+    name = "google-cloud-redis-v1-java",
+    deps = [
+        ":redis_java_gapic",
+        "@com_google_googleapis//google/cloud/redis/v1:redis_java_grpc",
+        "@com_google_googleapis//google/cloud/redis/v1:redis_java_proto",
+        "@com_google_googleapis//google/cloud/redis/v1:redis_proto",
+    ],
+)
+
+# Logging API
 java_gapic_library(
     name = "logging_java_gapic",
     srcs = ["@com_google_googleapis//google/logging/v2:logging_proto_with_info"],
@@ -101,3 +113,12 @@ java_gapic_library(
     ],
 )
 
+java_gapic_assembly_gradle_pkg(
+    name = "google-cloud-logging-v2-java",
+    deps = [
+        ":logging_java_gapic",
+        "@com_google_googleapis//google/logging/v2:logging_java_grpc",
+        "@com_google_googleapis//google/logging/v2:logging_java_proto",
+        "@com_google_googleapis//google/logging/v2:logging_proto",
+    ],
+)
