--- a/test/integration/BUILD.bazel
+++ b/test/integration/BUILD.bazel
@@ -132,3 +132,35 @@ java_gapic_assembly_gradle_pkg(
         "@com_google_googleapis//google/logging/v2:logging_proto",
     ],
 )
+####################################################
+# Ads Alpha
+####################################################
+
+java_gapic_library(
+    name = "googleads_java_gapic",
+    srcs = ["@com_google_googleapis//google/ads/googleads/v5:googleads_proto_with_info"],
+    grpc_service_config = "@com_google_googleapis//google/ads/googleads/v5:googleads_grpc_service_config.json",
+    package = "google.ads.googleads.v5",
+    service_yaml = "@com_google_googleapis//google/ads/googleads/v5:googleads_v5.yaml",
+    deps = [
+        "@com_google_googleapis//google/ads/googleads/v5/common:common_proto",
+        "@com_google_googleapis//google/ads/googleads/v5/enums:enums_java_proto",
+        "@com_google_googleapis//google/ads/googleads/v5/resources:resources_java_proto",
+        "@com_google_googleapis//google/ads/googleads/v5/services:services_java_grpc",
+        "@com_google_googleapis//google/ads/googleads/v5/services:services_java_proto",
+    ],
+)
+
+java_gapic_assembly_gradle_pkg(
+    name = "googleads-java",
+    deps = [
+        ":googleads_java_gapic",
+        "@com_google_googleapis//google/ads/googleads/v5:googleads_proto",
+        "@com_google_googleapis//google/ads/googleads/v5/common:common_java_proto",
+        "@com_google_googleapis//google/ads/googleads/v5/enums:enums_java_proto",
+        "@com_google_googleapis//google/ads/googleads/v5/errors:errors_java_proto",
+        "@com_google_googleapis//google/ads/googleads/v5/resources:resources_java_proto",
+        "@com_google_googleapis//google/ads/googleads/v5/services:services_java_grpc",
+        "@com_google_googleapis//google/ads/googleads/v5/services:services_java_proto",
+    ],
+)
