--- a/test/integration/BUILD.bazel
+++ b/test/integration/BUILD.bazel
@@ -16,29 +16,23 @@ package(default_visibility = ["//visibility:public"])
 # Integration Test Rules
 ####################################################
 
-integration_test(
-    name = "redis",
-    data = ["//test/integration/goldens/redis:goldens_files"],
-    target = ":redis_java_gapic",
-)
+INTEGRATION_TEST_LIBRARIES = [
+    "asset",
+    "logging",
+    "redis",
+]
 
-integration_test(
-    name = "asset",
-    data = ["//test/integration/goldens/asset:goldens_files"],
-    target = ":asset_java_gapic",
-)
+[integration_test(
+    name = lib_name,
+    data = ["//test/integration/goldens/%s:goldens_files" % lib_name],
+    target = ":%s_java_gapic" % lib_name,
+) for lib_name in INTEGRATION_TEST_LIBRARIES]
 
-golden_update(
-    name = "redis_update",
-    data = ["//test/integration/goldens/redis:goldens_files"],
-    target = ":redis_java_gapic",
-)
-
-golden_update(
-    name = "asset_update",
-    data = ["//test/integration/goldens/asset:goldens_files"],
-    target = ":asset_java_gapic",
-)
+[golden_update(
+    name = "%s_update" % lib_name,
+    data = ["//test/integration/goldens/%s:goldens_files" % lib_name],
+    target = ":%s_java_gapic" % lib_name,
+) for lib_name in INTEGRATION_TEST_LIBRARIES]
 
 ####################################################
 # API Library Rules
@@ -66,13 +60,12 @@ java_gapic_assembly_gradle_pkg(
     name = "google-cloud-asset-v1-java",
     deps = [
         ":asset_java_gapic",
-        "@com_google_googleapis//google/cloud/orgpolicy/v1:orgpolicy_java_proto",
         "@com_google_googleapis//google/cloud/asset/v1:asset_java_grpc",
-        "@com_google_googleapis//google/identity/accesscontextmanager/type:type_java_proto",
-        "@com_google_googleapis//google/identity/accesscontextmanager/v1:accesscontextmanager_java_proto",
         "@com_google_googleapis//google/cloud/asset/v1:asset_java_proto",
         "@com_google_googleapis//google/cloud/asset/v1:asset_proto",
-        #"@com_google_googleapis//google/iam/v1:iam_java_proto",
+        "@com_google_googleapis//google/cloud/orgpolicy/v1:orgpolicy_java_proto",
+        "@com_google_googleapis//google/identity/accesscontextmanager/type:type_java_proto",
+        "@com_google_googleapis//google/identity/accesscontextmanager/v1:accesscontextmanager_java_proto",
     ],
 )
 
