--- a/test/integration/BUILD.bazel
+++ b/test/integration/BUILD.bazel
@@ -86,6 +86,20 @@ java_gapic_library(
     ],
 )
 
+java_gapic_library(
+    name = "redis_java_gapic",
+    srcs = ["redis_proto_with_info"],
+    grpc_service_config = "@com_google_googleapis//google/cloud/redis/v1:redis_grpc_service_config.json",
+    package = "google.cloud.redis.v1",
+    service_yaml = "@com_google_googleapis//google/cloud/redis/v1:redis_v1.yaml",
+    test_deps = [
+        "@com_google_googleapis//google/cloud/redis/v1:redis_java_grpc",
+    ],
+    deps = [
+        "@com_google_googleapis//google/cloud/redis/v1:redis_java_proto",
+    ],
+)
+
 # Logging API
 java_gapic_library(
     name = "logging_java_gapic",
@@ -99,5 +113,15 @@ java_gapic_library(
     deps = [
         "@com_google_googleapis//google/api:api_java_proto",
         "@com_google_googleapis//google/logging/v2:logging_java_proto",
+    ],
+)
+
+java_gapic_assembly_gradle_pkg(
+    name = "google-cloud-logging-v2-java",
+    deps = [
+        ":logging_java_gapic",
+        "@com_google_googleapis//google/logging/v2:logging_java_grpc",
+        "@com_google_googleapis//google/logging/v2:logging_java_proto",
+        "@com_google_googleapis//google/logging/v2:logging_proto",
     ],
 )
