[ggj][codegen] fix: add workaround for missing default_host and oauth_scopes annotation (#419)
* fix: support non-name fields with res-refs in resname def parsing

* fix: add workaround for missing default_host and oauth_scopes annotation

* [ggj][infra][3/5]feat: add goldens update bazel rules for Redis API (#396)

* goldens update bazel rules

* clean up

* [ggj][infra][4/5]feat: add goldens update bazel rules for Asset API (#397)

* goldens update bazel rules

* clean up

* goldens update rule for asset API

* update goldens

* [ggj][infra][3/5]feat: add goldens update bazel rules for Redis API (#396)

* goldens update bazel rules

* clean up

* [ggj][infra][4/5]feat: add goldens update bazel rules for Asset API (#397)

* goldens update bazel rules

* clean up

* goldens update rule for asset API

* update goldens

* [ggj][infra][3/5]feat: add goldens update bazel rules for Redis API (#396)

* goldens update bazel rules

* clean up

* [ggj][infra][4/5]feat: add goldens update bazel rules for Asset API (#397)

* goldens update bazel rules

* clean up

* goldens update rule for asset API

* update goldens

Co-authored-by: Xiaozhen Liu <xiaozhenliu@google.com>

--- a/gapic-generator-java/test/integration/BUILD.bazel
+++ b/gapic-generator-java/test/integration/BUILD.bazel
@@ -5,6 +5,7 @@ load(
 )
 load(
     "//:rules_bazel/java/integration_test.bzl",
+    "golden_update",
     "integration_test",
     "golden_update",
 )
@@ -23,8 +24,27 @@ integration_test(
 
 integration_test(
     name = "asset",
-    target = ":asset_java_gapic",
     data = ["//test/integration/goldens/asset:goldens_files"],
+    target = ":asset_java_gapic",
+)
+
+golden_update(
+    name = "redis_update",
+    data = ["//test/integration/goldens/redis:goldens_files"],
+    target = ":redis_java_gapic",
+)
+
+golden_update(
+    name = "asset_update",
+    data = ["//test/integration/goldens/asset:goldens_files"],
+    target = ":asset_java_gapic",
+)
+
+golden_update(
+    name = "asset_update",
+    data = ["//test/integration/goldens/asset:goldens_files"],
+    data = ["//test/integration/goldens/asset:goldens_files"],
+    target = ":asset_java_gapic",
 )
 
 golden_update(
@@ -100,4 +120,3 @@ java_gapic_library(
         "@com_google_googleapis//google/logging/v2:logging_java_proto",
     ],
 )
-
