--- a/gapic-generator-java/src/test/java/com/google/api/generator/gapic/protoparser/BUILD.bazel
+++ b/gapic-generator-java/src/test/java/com/google/api/generator/gapic/protoparser/BUILD.bazel
@@ -13,6 +13,7 @@ TESTS = [
     "ServiceConfigParserTest",
     "ServiceYamlParserTest",
     "SourceCodeInfoParserTest",
+    "TypeParserTest",
 ]
 
 filegroup(
