--- a/test/integration/BUILD.bazel
+++ b/test/integration/BUILD.bazel
@@ -86,6 +86,7 @@ java_gapic_library(
     ],
 )
 
+# Logging API
 java_gapic_library(
     name = "logging_java_gapic",
     srcs = ["@com_google_googleapis//google/logging/v2:logging_proto_with_info"],
