--- a/src/main/java/com/google/api/generator/gapic/utils/BUILD.bazel
+++ b/src/main/java/com/google/api/generator/gapic/utils/BUILD.bazel
@@ -14,6 +14,7 @@ java_library(
     ],
     deps = [
         "//src/main/java/com/google/api/generator/engine/ast",
+        "//src/main/java/com/google/api/generator/engine/writer",
         "@com_google_guava_guava//jar",
     ],
 )
