--- a/src/main/java/com/google/api/generator/gapic/utils/BUILD.bazel
+++ b/src/main/java/com/google/api/generator/gapic/utils/BUILD.bazel
@@ -16,5 +16,6 @@ java_library(
         "//src/main/java/com/google/api/generator/engine/ast",
         "//src/main/java/com/google/api/generator/engine/writer",
         "@com_google_guava_guava//jar",
+        "@google_java_format_all_deps//jar",
     ],
 )
