ci: run bazel tests on GitHub actions (#1242)
This will allow us to turn off Travis in this repo (Travis was running the bazel tests in addition to the gradle tests).

--- a/gax-java/.github/sync-repo-settings.yaml
+++ b/gax-java/.github/sync-repo-settings.yaml
@@ -28,6 +28,7 @@ branchProtectionRules:
   requiresStrictStatusChecks: true
   # List of required status check contexts that must pass for commits to be accepted to matching branches.
   requiredStatusCheckContexts:
+    - "bazel"
     - "linkage-monitor"
     - "units (7)"
     - "units (8)"
