--- a/gax-java/.github/workflows/ci.yaml
+++ b/gax-java/.github/workflows/ci.yaml
@@ -23,6 +23,30 @@ jobs:
         uses: codecov/codecov-action@v1
         with:
           name: actions ${{ matrix.java }}
+  bazel:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 8
+      - run: java -version
+      - name: Install Bazel
+        run: |
+          wget -q "https://github.com/bazelbuild/bazel/releases/download/$BAZEL_VERSION/$BAZEL_BINARY"
+          wget -q "https://github.com/bazelbuild/bazel/releases/download/$BAZEL_VERSION/$BAZEL_BINARY.sha256"
+          sha256sum -c "$BAZEL_BINARY.sha256"
+          sudo dpkg -i "$BAZEL_BINARY"
+        env:
+          BAZEL_VERSION: 3.5.0
+          BAZEL_BINARY: bazel_3.5.0-linux-x86_64.deb
+      - name: Run bazel tests
+        run: bazel --batch test //... --noshow_progress --test_output=errors
+      - name: coverage
+        uses: codecov/codecov-action@v1
+        with:
+          name: actions bazel
+
   linkage-monitor:
     runs-on: ubuntu-latest
     steps:
