Add writeSampleCode method

--- a/src/main/java/com/google/api/generator/gapic/composer/samplecode/BUILD.bazel
+++ b/src/main/java/com/google/api/generator/gapic/composer/samplecode/BUILD.bazel
@@ -13,6 +13,8 @@ java_library(
         ":samplecode_files",
     ],
     deps = [
+        "//src/main/java/com/google/api/generator/engine/ast",
+        "//src/main/java/com/google/api/generator/engine/writer",
         "@google_java_format_all_deps//jar",
     ],
 )
