fix: centralize/streamline createLines() test util

--- a/src/test/java/com/google/api/generator/engine/ast/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/engine/ast/BUILD.bazel
@@ -54,6 +54,7 @@ filegroup(
     test_class = "com.google.api.generator.engine.ast.{0}".format(test_name),
     deps = [
         "//src/main/java/com/google/api/generator/engine/ast",
+        "//src/test/java/com/google/api/generator/testutils",
         "@com_google_guava_guava//jar",
         "@com_google_truth_truth//jar",
         "@junit_junit//jar",
