[ggj][engx] fix: centralize/streamline createLines() test util (#510)
* fix: Update LRO initial_retry_delayo o 5s (discussion in doc)

* fix: correct some common typos

* fix: switch assertEquals (actual,expected) args order in JavaDocCommentTest

* fix: switch assertEquals (actual,expected) args order in AST tests

* fix: switch assertEquals (actual,expected) args order in gapic tests

* fix: merge master

* fix: centralize/streamline createLines() test util

--- a/gapic-generator-java/src/test/java/com/google/api/generator/gapic/composer/samplecode/BUILD.bazel
+++ b/gapic-generator-java/src/test/java/com/google/api/generator/gapic/composer/samplecode/BUILD.bazel
@@ -21,6 +21,7 @@ filegroup(
         "//src/main/java/com/google/api/generator/engine/writer",
         "//src/main/java/com/google/api/generator/gapic/composer/samplecode",
         "//src/main/java/com/google/api/generator/gapic/model",
+        "//src/test/java/com/google/api/generator/testutils",
         "@com_google_api_gax_java//gax",
         "@com_google_truth_truth//jar",
         "@junit_junit//jar",
