--- a/gapic-generator-java/src/test/java/com/google/api/generator/engine/writer/BUILD.bazel
+++ b/gapic-generator-java/src/test/java/com/google/api/generator/engine/writer/BUILD.bazel
@@ -19,6 +19,7 @@ filegroup(
     deps = [
         "//src/main/java/com/google/api/generator/engine/ast",
         "//src/main/java/com/google/api/generator/engine/writer",
+        "//src/test/java/com/google/api/generator/testutils",
         "@com_google_guava_guava//jar",
         "@com_google_truth_truth//jar",
         "@junit_junit//jar",
