--- a/src/test/java/com/google/api/generator/gapic/testdata/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/testdata/BUILD.bazel
@@ -9,6 +9,11 @@ filegroup(
 )
 
 filegroup(
+    name = "gapic_config_files",
+    srcs = glob(["*_gapic.yaml"]),
+)
+
+filegroup(
     name = "service_yaml_files",
     srcs = ["logging.yaml"],
 )
