[samplecode][1/3]Implement Pure Unary RPC sample code (#573)

--- a/src/test/java/com/google/api/generator/gapic/composer/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/composer/BUILD.bazel
@@ -19,6 +19,7 @@ UPDATE_GOLDENS_TESTS = [
 
 TESTS = UPDATE_GOLDENS_TESTS + [
     "RetrySettingsComposerTest",
+    "ServiceClientSampleCodeComposerTest",
 ]
 
 TEST_DEPS = [
