--- a/test/integration/BUILD.bazel
+++ b/test/integration/BUILD.bazel
@@ -45,14 +45,14 @@ INTEGRATION_TEST_LIBRARIES = [
 # Asset API.
 java_gapic_library(
     name = "asset_java_gapic",
-    srcs = ["@com_google_googleapis//google/cloud/asset/v1:asset_proto_with_info"],
-    grpc_service_config = "@com_google_googleapis//google/cloud/asset/v1:cloudasset_grpc_service_config.json",
+    srcs = ["@com_google_googleapis//google/cloud/asset/v1beta1:asset_proto_with_info"],
+    grpc_service_config = "@com_google_googleapis//google/cloud/asset/v1beta1:cloudasset_grpc_service_config.json",
     test_deps = [
-        "@com_google_googleapis//google/cloud/asset/v1:asset_java_grpc",
+        "@com_google_googleapis//google/cloud/asset/v1beta1:asset_java_grpc",
         "@com_google_googleapis//google/iam/v1:iam_java_grpc",
     ],
     deps = [
-        "@com_google_googleapis//google/cloud/asset/v1:asset_java_proto",
+        "@com_google_googleapis//google/cloud/asset/v1beta1:asset_java_proto",
         "@com_google_googleapis//google/iam/v1:iam_java_proto",
         "@com_google_googleapis//google/identity/accesscontextmanager/v1:accesscontextmanager_proto",
     ],
@@ -61,18 +61,18 @@ java_gapic_library(
 java_gapic_test(
     name = "asset_java_gapic_test_suite",
     test_classes = [
-        "com.google.cloud.asset.v1.AssetServiceClientTest",
+        "com.google.cloud.asset.v1beta1.AssetServiceClientTest",
     ],
     runtime_deps = [":asset_java_gapic_test"],
 )
 
 java_gapic_assembly_gradle_pkg(
-    name = "google-cloud-asset-v1-java",
+    name = "google-cloud-asset-v1beta1-java",
     deps = [
         ":asset_java_gapic",
-        "@com_google_googleapis//google/cloud/asset/v1:asset_java_grpc",
-        "@com_google_googleapis//google/cloud/asset/v1:asset_java_proto",
-        "@com_google_googleapis//google/cloud/asset/v1:asset_proto",
+        "@com_google_googleapis//google/cloud/asset/v1beta1:asset_java_grpc",
+        "@com_google_googleapis//google/cloud/asset/v1beta1:asset_java_proto",
+        "@com_google_googleapis//google/cloud/asset/v1beta1:asset_proto",
         "@com_google_googleapis//google/cloud/orgpolicy/v1:orgpolicy_java_proto",
         "@com_google_googleapis//google/identity/accesscontextmanager/v1:accesscontextmanager_java_proto",
     ],
