Refactor settings sample code and add unit test

--- a/src/test/java/com/google/api/generator/gapic/composer/samplecode/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/composer/samplecode/BUILD.bazel
@@ -6,6 +6,7 @@ TESTS = [
     "SampleCodeJavaFormatterTest",
     "SampleCodeWriterTest",
     "ServiceClientSampleCodeComposerTest",
+    "SettingsSampleCodeComposerTest",
 ]
 
 filegroup(
