--- a/gax-java/dependencies.properties
+++ b/gax-java/dependencies.properties
@@ -34,8 +34,8 @@ version.io_grpc=1.32.2
 #   2) Replace all characters which are neither alphabetic nor digits with the underscore ('_') character
 maven.com_google_api_grpc_proto_google_common_protos=com.google.api.grpc:proto-google-common-protos:1.18.1
 maven.com_google_api_grpc_grpc_google_common_protos=com.google.api.grpc:grpc-google-common-protos:1.18.1
-maven.com_google_auth_google_auth_library_oauth2_http=com.google.auth:google-auth-library-oauth2-http:0.22.0
-maven.com_google_auth_google_auth_library_credentials=com.google.auth:google-auth-library-credentials:0.22.0
+maven.com_google_auth_google_auth_library_oauth2_http=com.google.auth:google-auth-library-oauth2-http:0.23.0
+maven.com_google_auth_google_auth_library_credentials=com.google.auth:google-auth-library-credentials:0.23.0
 maven.io_opencensus_opencensus_api=io.opencensus:opencensus-api:0.24.0
 maven.io_opencensus_opencensus_contrib_grpc_metrics=io.opencensus:opencensus-contrib-grpc-metrics:0.24.0
 maven.io_opencensus_opencensus_contrib_http_util=io.opencensus:opencensus-contrib-http-util:0.24.0
@@ -51,8 +51,7 @@ maven.org_threeten_threetenbp=org.threeten:threetenbp:1.5.0
 maven.com_google_api_grpc_grpc_google_iam_v1=com.google.api.grpc:grpc-google-iam-v1:1.0.7
 maven.com_google_api_grpc_proto_google_iam_v1=com.google.api.grpc:proto-google-iam-v1:1.0.7
 maven.com_google_http_client_google_http_client=com.google.http-client:google-http-client:1.38.1
-maven.com_google_http_client_google_http_client_jackson2=com.google.http-client:google-http-client-jackson2:1.38.0
-maven.com_fasterxml_jackson_core_jackson_core=com.fasterxml.jackson.core:jackson-core:2.11.3
+maven.com_google_http_client_google_http_client_gson=com.google.http-client:google-http-client-gson:1.38.1
 maven.org_codehaus_mojo_animal_sniffer_annotations=org.codehaus.mojo:animal-sniffer-annotations:1.18
 maven.javax_annotation_javax_annotation_api=javax.annotation:javax.annotation-api:1.3.2
 
