--- a/gax-java/gax-grpc/BUILD.bazel
+++ b/gax-java/gax-grpc/BUILD.bazel
@@ -15,6 +15,7 @@ _COMPILE_DEPS = [
     "@com_google_protobuf//:protobuf_java",
     "@com_google_guava_guava//jar",
     "@com_google_code_findbugs_jsr305//jar",
+    "@com_google_code_gson_gson//jar",
     "@org_threeten_threetenbp//jar",
     "@com_google_auth_google_auth_library_oauth2_http//jar",
     "@com_google_auth_google_auth_library_credentials//jar",
