deps: update gRPC (#1263)
* deps: update gRPC

--- a/gax-java/dependencies.properties
+++ b/gax-java/dependencies.properties
@@ -25,7 +25,7 @@ version.gax_httpjson=0.77.2-SNAPSHOT
 # with the sources.
 version.com_google_protobuf=3.14.0
 version.google_java_format=1.1
-version.io_grpc=1.32.2
+version.io_grpc=1.35.0
 
 # Maven artifacts.
 # Note, the actual name of each property matters (bazel build scripts depend on it).
@@ -39,8 +39,24 @@ maven.com_google_auth_google_auth_library_credentials=com.google.auth:google-aut
 maven.io_opencensus_opencensus_api=io.opencensus:opencensus-api:0.24.0
 maven.io_opencensus_opencensus_contrib_grpc_metrics=io.opencensus:opencensus-contrib-grpc-metrics:0.24.0
 maven.io_opencensus_opencensus_contrib_http_util=io.opencensus:opencensus-contrib-http-util:0.24.0
+maven.io_netty_netty_tcnative_boringssl_static=io.netty:netty-tcnative-boringssl-static:2.0.36.Final
+maven.io_netty_netty_handler=io.netty:netty-handler:4.1.52.Final
+maven.io_netty_netty_common=io.netty:netty-common:4.1.52.Final
+maven.io_netty_netty_codec_socks=io.netty:netty-codec-socks:4.1.52.Final
+maven.io_netty_netty_codec_http2=io.netty:netty-codec-http2:4.1.52.Final
+maven.io_netty_netty_codec_http=io.netty:netty-codec-http:4.1.52.Final
+maven.io_netty_netty_codec=io.netty:netty-codec:4.1.52.Final
+maven.io_netty_netty_buffer=io.netty:netty-buffer:4.1.52.Final
+maven.io_netty_netty_resolver=io.netty:netty-resolver:4.1.52.Final
+maven.io_netty_netty_transport=io.netty:netty-transport:4.1.52.Final
+maven.io_netty_netty_handler_proxy=io.netty:netty-handler-proxy:4.1.52.Final
+maven.io_perfmark_perfmark_api=io.perfmark:perfmark-api:0.23.0
+maven.org_apache_tomcat_annotations_api=org.apache.tomcat:annotations-api:6.0.53
 maven.com_google_code_gson_gson=com.google.code.gson:gson:2.8.6
 maven.com_google_guava_guava=com.google.guava:guava:30.1-android
+maven.com_google_guava_failureaccess=com.google.guava:failureaccess:1.0.1
+maven.org_apache_commons_commons_lang3=org.apache.commons:commons-lang3:3.8.1
+maven.com_google_android_annotations=com.google.android:annotations:4.1.1.4
 maven.com_google_code_findbugs_jsr305=com.google.code.findbugs:jsr305:3.0.2
 maven.com_google_errorprone_error_prone_annotations=com.google.errorprone:error_prone_annotations:2.5.1
 maven.com_google_j2objc_j2objc_annotations=com.google.j2objc:j2objc-annotations:1.3
